--- a/edu/pom.xml
+++ b/edu/pom.xml
@@ -70,6 +70,7 @@
           <path>/</path>
           <!--这个名称需要，在maven插件中显示应用名称-->
           <server>tomcat7</server>
+          <uriEncoding>UTF-8</uriEncoding>
         </configuration>
       </plugin>
       <plugin>
